--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.2",
+    "firebase": "^5.8.5",
     "mysql": "^2.16.0",
     "mysql2": "^1.6.5",
     "sequelize": "^4.43.0"
